# universal-flat-file-loader

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
src/: api_response.py  app_config.ini  connections_config.ini  main.py
src/config/: app_config.ini  docker.env
src/spec_builder/: script_updater.py  spec_builder.py
src/utils/: analyze_load_file.py  build_engine.py  config_reader.py  current_timestamp.py  detect_encoding.py  generate_config.py  password.py  password_aws.py  password_custom.py  password_keyring.py  password_ssm.py  spec_builder.py  spec_builder_config.ini  time_difference.py
src/utils/[Outdated]/: JSON Test.py  build_engine.py  clean_sql.py  config_reader.py  password_aws.py  password_custom.py  password_keyring.py  password_ssm.py  time_difference.py
templates/S3 Folder Structure/Config/: app_config.ini  connections_config.ini  docker.env  spec_builder_config.ini
templates/flat_files_01/: file_to_process_01.txt
templates/flat_files_01/support/: file_config.ini  mapping_spec_flat_files_01.xlsx  stage post-load 01 - flat_files_01.sql  stg to target load - flat_files_01.sql  target post-load 01 - flat_files_01.sql  target post-load 02 - flat_files_01.sql  wrk to stg load - flat_files_01.sql
